k8s-minikube-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: news-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: newsapplocal.net
# newsapplocal.net should be mapped in HOST system hosts file to the ip address of the ingress returned by "kubectl get ingress"
# see https://kubernetes.io/docs/tasks/access-application-cluster/ingress-minikube/ for the details
      http:
        paths:
        - path: /(.*)
          backend:
            serviceName: news-app-service
            servicePort: 8080
